snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2.jar.sha512
57de0c08ad7247f63eb9aefccd25a4518db22b09da8939348ea0a385c52c2bafffc72c642f7c2930fdebe173e0e7e72c29515cc0dc3391640c273a1f9e8bbd42